--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\kotai\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Tools\\flutter
+sdk.dir=C:\\Users\\harsh\\AppData\\Local\\Android\\sdk
+flutter.sdk=D:\\flutter
 flutter.versionName=0.1.0
