--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,17 @@ version: 0.1.1+5
 homepage: https://github.com/kw2019ltd/flutter_file_utils
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  path: ^1.7.0
-  path_provider: ^1.6.24
-  package_info: ^0.4.3+2
+  path: ^1.8.0
+  path_provider: ^2.0.2
+  package_info: ^2.0.2
 
 dev_dependencies:
-  pedantic: ^1.9.2
+  pedantic: ^1.11.0
 
 flutter:
 
